[gd_scene load_steps=5 format=3 uid="uid://deak8eqq18tgd"]

[ext_resource type="Texture2D" uid="uid://cypf73ek5rccq" path="res://artilleryWheel.png" id="1_0dotr"]
[ext_resource type="Script" path="res://artillery.gd" id="1_7s5at"]
[ext_resource type="Texture2D" uid="uid://1fpkg1ieaowp" path="res://artilleryBarrel.png" id="2_s374q"]
[ext_resource type="Texture2D" uid="uid://12tac7qjydkx" path="res://artilleryRing.png" id="3_5ke8s"]

[node name="Artillery" type="Node2D"]
script = ExtResource("1_7s5at")

[node name="Wheel" type="Sprite2D" parent="."]
texture = ExtResource("1_0dotr")

[node name="Barrel" type="Sprite2D" parent="Wheel"]
rotation = -1.07861
texture = ExtResource("2_s374q")

[node name="Ring" type="Sprite2D" parent="Wheel/Barrel"]
texture = ExtResource("3_5ke8s")

[node name="Node2D" type="Node2D" parent="Wheel/Barrel"]
position = Vector2(809, -136)

[node name="Angle" type="HSlider" parent="."]
offset_left = -434.0
offset_top = -695.0
offset_right = 434.0
offset_bottom = -605.0
min_value = -50.0
max_value = 50.0

[node name="Force" type="HSlider" parent="."]
offset_left = -433.0
offset_top = -572.0
offset_right = 435.0
offset_bottom = -482.0
max_value = 20.0

[node name="Button" type="Button" parent="."]
offset_left = 512.0
offset_top = -665.0
offset_right = 956.0
offset_bottom = -491.0
theme_override_font_sizes/font_size = 106
text = "Fire!"

[connection signal="value_changed" from="Angle" to="." method="_on_angle_value_changed"]
[connection signal="value_changed" from="Force" to="." method="_on_force_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
